# oopLab_5

./: CMakeLists.txt  README.md
impl/: forwardList.ipp
include/: customAllocator.hpp  forwardList.hpp
src/: customAllocator.cpp  main.cpp
test/: listTest.cpp
